[package]
name = "ui-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
js-sys = "0.3.69"
lazy_static = "1.4.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thread_local = "1.1.8"
url = "2.5.0"
uuid = "1.8.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = "0.7.0"
yew-oauth2 = { version = "0.11.0", features = ["openid", "yew-nested-router"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlFormElement",
  "DataTransfer",
]

[build-dependencies]
anyhow = "1.0.83"
convert_case = "0.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[[example]]
name = "components"
path = "examples/components/src/main.rs"
