[package]
name = "ui-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
js-sys = "0.3.69"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thread_local = "1.1.8"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"
yew-nested-router = "0.7.0"
yew-oauth2 = { version = "0.11.0", features = ["openid", "yew-nested-router"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "DomRect",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlFormElement",
  "DataTransfer",
  "DomTokenList",
]

[build-dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[[example]]
name = "components"
path = "examples/components/src/main.rs"
